# marketwatcher

./: .env.example  .gitignore  plan.md  pyproject.toml
config/: chains.json  schedules.yaml  settings.yaml  watchlists.yaml
deploy/vps/: install.sh  marketwatcher.service
src/marketwatcher/: __init__.py  alerts.py  bot.py  chains.py  cli.py  config.py  logging_config.py  models.py  scheduler_queue.py  timezones.py  watchlist.py
src/marketwatcher/formatters/: global_onchain.py  macro.py  onchain.py  telegram_html.py  watchlist.py
src/marketwatcher/formatters/templates/: telegram_global_onchain_v1.html.j2  telegram_macro_v1.html.j2  telegram_market_v1.html.j2  telegram_onchain_v1.html.j2  telegram_watchlist_v1.html.j2
src/marketwatcher/providers/: coingecko.py  defillama.py  geckoterminal.py  macro.py
src/marketwatcher/publishers/: telegram.py
src/marketwatcher/reports/: global_onchain.py  macro.py  market_summary.py  onchain.py  watchlist.py
src/marketwatcher/storage/: jsonl.py  sqlite.py
src/marketwatcher/tui/: app.py
